--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
 <div id="trabajos">
     <h2>Trabajos realizados</h2>
     <div class="trabajo">
-    <img src="img/An1.jpg" alt="Antes">
+    <img src="An1.jpg" alt="Antes">
     <div class="descripcion">
         <p style="font-weight: bold;">Resultado del tratamiento</p>
         <p>nissim eros. In condimentum non lorem eget suscipit. Integer blandit orci id condimentum commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec enim facilisis, blandit sem in, vehicula mauris. Vivamus vitae metus tempor, efficitur mauris eget, </p>
     </div>
-    <img src="img/De1.jpg" alt="Después">
+    <img src="De1.jpg" alt="Después">
     
     </div>
 
     <div class="trabajo">
-    <img src="img/An2.jpg" alt="Antes">
+    <img src="An2.jpg" alt="Antes">
     <div class="descripcion">
         <p style="font-weight: bold;">Resultado del tratamiento</p>
     </div>
-    <img src="img/De2.jpg" alt="Después">
+    <img src="De2.jpg" alt="Después">
     </div>
 
     <div class="trabajo">
     
-    <img src="img/An3.jpg" alt="Antes">
+    <img src="An3.jpg" alt="Antes">
     <div class="descripcion">
         <p style="font-weight: bold;">Resultado del tratamiento</p>
     </div>
-    <img src="img/De3.jpg" alt="Después">
+    <img src="De3.jpg" alt="Después">
 
     </div>
 </div>
