Cambio del correo en el footer y correccionn de modos de contacto junto al texto de la tercera imagen

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     <img src="An4.jpg" alt="Antes">
     <div class="descripcion">
-        <p style="font-weight: bold;">Resultado del tratamiento</p>
+        <p style="font-weight: bold;">Se quitó la cocina y se hizo una habitación</p>
     </div>
     <img src="De4.jpg" alt="Después">
 
@@ -51,8 +51,8 @@
 </div>
 
 <footer id="contacto">
-    <a href="mailto:id00911089@usal.es" style="font-size: 1em;">✉️​ Email</a>
-    <a href="tel:+649525633" style="font-size: 1em;">📞 Llamar a 649 52 56 33</a>
+    <a href="mailto:juansantero0@gmail.com" style="font-size: 1em;">✉️​ Email</a>
+    <a href="tel:+34 649525633" style="font-size: 1em;">📞 Llamar a +34 649 52 56 33</a>
 </footer>
 </body>
 </html>
